// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|CardGrid columnWidth 1`] = `
.emotion-7 {
  padding: 16px;
}

.emotion-7:last-child {
  padding-bottom: 24px;
}

.emotion-3 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.33;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  margin-bottom: 0.35em;
}

.emotion-5 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  color: rgba(0,0,0,0.54);
}

.emotion-1 {
  display: block;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  height: 140px;
}

.emotion-10 {
  background-color: #fff;
  color: rgba(0,0,0,0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  border-radius: 4px;
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12);
  overflow: hidden;
}

.emotion-72 {
  display: grid;
  grid-gap: 16px;
  grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
}

<div
  className="emotion-72 emotion-73"
>
  <div
    className="emotion-9 emotion-10 emotion-11"
    elevation={1}
  >
    <div
      className="emotion-0 emotion-1 emotion-2"
      style={
        Object {
          "backgroundImage": "url(\\"/images/bridge.jpg\\")",
        }
      }
      title="Golden Gate Bridge"
    />
    <div
      className="emotion-7 emotion-8"
    >
      <h2
        className="emotion-3 emotion-4"
      >
        Golden Gate Bridge
      </h2>
      <p
        className="emotion-5 emotion-4"
      >
        The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.
      </p>
    </div>
  </div>
  <div
    className="emotion-9 emotion-10 emotion-11"
    elevation={1}
  >
    <div
      className="emotion-0 emotion-1 emotion-2"
      style={
        Object {
          "backgroundImage": "url(\\"/images/bridge.jpg\\")",
        }
      }
      title="Golden Gate Bridge"
    />
    <div
      className="emotion-7 emotion-8"
    >
      <h2
        className="emotion-3 emotion-4"
      >
        Golden Gate Bridge
      </h2>
      <p
        className="emotion-5 emotion-4"
      >
        The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.
      </p>
    </div>
  </div>
  <div
    className="emotion-9 emotion-10 emotion-11"
    elevation={1}
  >
    <div
      className="emotion-0 emotion-1 emotion-2"
      style={
        Object {
          "backgroundImage": "url(\\"/images/bridge.jpg\\")",
        }
      }
      title="Golden Gate Bridge"
    />
    <div
      className="emotion-7 emotion-8"
    >
      <h2
        className="emotion-3 emotion-4"
      >
        Golden Gate Bridge
      </h2>
      <p
        className="emotion-5 emotion-4"
      >
        The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.
      </p>
    </div>
  </div>
  <div
    className="emotion-9 emotion-10 emotion-11"
    elevation={1}
  >
    <div
      className="emotion-0 emotion-1 emotion-2"
      style={
        Object {
          "backgroundImage": "url(\\"/images/bridge.jpg\\")",
        }
      }
      title="Golden Gate Bridge"
    />
    <div
      className="emotion-7 emotion-8"
    >
      <h2
        className="emotion-3 emotion-4"
      >
        Golden Gate Bridge
      </h2>
      <p
        className="emotion-5 emotion-4"
      >
        The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.
      </p>
    </div>
  </div>
  <div
    className="emotion-9 emotion-10 emotion-11"
    elevation={1}
  >
    <div
      className="emotion-0 emotion-1 emotion-2"
      style={
        Object {
          "backgroundImage": "url(\\"/images/bridge.jpg\\")",
        }
      }
      title="Golden Gate Bridge"
    />
    <div
      className="emotion-7 emotion-8"
    >
      <h2
        className="emotion-3 emotion-4"
      >
        Golden Gate Bridge
      </h2>
      <p
        className="emotion-5 emotion-4"
      >
        The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.
      </p>
    </div>
  </div>
  <div
    className="emotion-9 emotion-10 emotion-11"
    elevation={1}
  >
    <div
      className="emotion-0 emotion-1 emotion-2"
      style={
        Object {
          "backgroundImage": "url(\\"/images/bridge.jpg\\")",
        }
      }
      title="Golden Gate Bridge"
    />
    <div
      className="emotion-7 emotion-8"
    >
      <h2
        className="emotion-3 emotion-4"
      >
        Golden Gate Bridge
      </h2>
      <p
        className="emotion-5 emotion-4"
      >
        The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|CardGrid default 1`] = `
.emotion-7 {
  padding: 16px;
}

.emotion-7:last-child {
  padding-bottom: 24px;
}

.emotion-3 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.33;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  margin-bottom: 0.35em;
}

.emotion-5 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  color: rgba(0,0,0,0.54);
}

.emotion-1 {
  display: block;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  height: 140px;
}

.emotion-72 {
  display: grid;
  grid-gap: 16px;
  grid-template-columns: repeat(auto-fill,minmax(200px,1fr));
}

.emotion-10 {
  background-color: #fff;
  color: rgba(0,0,0,0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  border-radius: 4px;
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12);
  overflow: hidden;
}

<div
  className="emotion-72 emotion-73"
>
  <div
    className="emotion-9 emotion-10 emotion-11"
    elevation={1}
  >
    <div
      className="emotion-0 emotion-1 emotion-2"
      style={
        Object {
          "backgroundImage": "url(\\"/images/bridge.jpg\\")",
        }
      }
      title="Golden Gate Bridge"
    />
    <div
      className="emotion-7 emotion-8"
    >
      <h2
        className="emotion-3 emotion-4"
      >
        Golden Gate Bridge
      </h2>
      <p
        className="emotion-5 emotion-4"
      >
        The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.
      </p>
    </div>
  </div>
  <div
    className="emotion-9 emotion-10 emotion-11"
    elevation={1}
  >
    <div
      className="emotion-0 emotion-1 emotion-2"
      style={
        Object {
          "backgroundImage": "url(\\"/images/bridge.jpg\\")",
        }
      }
      title="Golden Gate Bridge"
    />
    <div
      className="emotion-7 emotion-8"
    >
      <h2
        className="emotion-3 emotion-4"
      >
        Golden Gate Bridge
      </h2>
      <p
        className="emotion-5 emotion-4"
      >
        The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.
      </p>
    </div>
  </div>
  <div
    className="emotion-9 emotion-10 emotion-11"
    elevation={1}
  >
    <div
      className="emotion-0 emotion-1 emotion-2"
      style={
        Object {
          "backgroundImage": "url(\\"/images/bridge.jpg\\")",
        }
      }
      title="Golden Gate Bridge"
    />
    <div
      className="emotion-7 emotion-8"
    >
      <h2
        className="emotion-3 emotion-4"
      >
        Golden Gate Bridge
      </h2>
      <p
        className="emotion-5 emotion-4"
      >
        The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.
      </p>
    </div>
  </div>
  <div
    className="emotion-9 emotion-10 emotion-11"
    elevation={1}
  >
    <div
      className="emotion-0 emotion-1 emotion-2"
      style={
        Object {
          "backgroundImage": "url(\\"/images/bridge.jpg\\")",
        }
      }
      title="Golden Gate Bridge"
    />
    <div
      className="emotion-7 emotion-8"
    >
      <h2
        className="emotion-3 emotion-4"
      >
        Golden Gate Bridge
      </h2>
      <p
        className="emotion-5 emotion-4"
      >
        The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.
      </p>
    </div>
  </div>
  <div
    className="emotion-9 emotion-10 emotion-11"
    elevation={1}
  >
    <div
      className="emotion-0 emotion-1 emotion-2"
      style={
        Object {
          "backgroundImage": "url(\\"/images/bridge.jpg\\")",
        }
      }
      title="Golden Gate Bridge"
    />
    <div
      className="emotion-7 emotion-8"
    >
      <h2
        className="emotion-3 emotion-4"
      >
        Golden Gate Bridge
      </h2>
      <p
        className="emotion-5 emotion-4"
      >
        The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.
      </p>
    </div>
  </div>
  <div
    className="emotion-9 emotion-10 emotion-11"
    elevation={1}
  >
    <div
      className="emotion-0 emotion-1 emotion-2"
      style={
        Object {
          "backgroundImage": "url(\\"/images/bridge.jpg\\")",
        }
      }
      title="Golden Gate Bridge"
    />
    <div
      className="emotion-7 emotion-8"
    >
      <h2
        className="emotion-3 emotion-4"
      >
        Golden Gate Bridge
      </h2>
      <p
        className="emotion-5 emotion-4"
      >
        The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|CardGrid gridGap 1`] = `
.emotion-7 {
  padding: 16px;
}

.emotion-7:last-child {
  padding-bottom: 24px;
}

.emotion-3 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.33;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  margin-bottom: 0.35em;
}

.emotion-5 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  -webkit-letter-spacing: 0.01071em;
  -moz-letter-spacing: 0.01071em;
  -ms-letter-spacing: 0.01071em;
  letter-spacing: 0.01071em;
  color: rgba(0,0,0,0.54);
}

.emotion-1 {
  display: block;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  height: 140px;
}

.emotion-10 {
  background-color: #fff;
  color: rgba(0,0,0,0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  border-radius: 4px;
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12);
  overflow: hidden;
}

.emotion-72 {
  display: grid;
  grid-gap: 24px;
  grid-template-columns: repeat(auto-fill,minmax(200px,1fr));
}

<div
  className="emotion-72 emotion-73"
>
  <div
    className="emotion-9 emotion-10 emotion-11"
    elevation={1}
  >
    <div
      className="emotion-0 emotion-1 emotion-2"
      style={
        Object {
          "backgroundImage": "url(\\"/images/bridge.jpg\\")",
        }
      }
      title="Golden Gate Bridge"
    />
    <div
      className="emotion-7 emotion-8"
    >
      <h2
        className="emotion-3 emotion-4"
      >
        Golden Gate Bridge
      </h2>
      <p
        className="emotion-5 emotion-4"
      >
        The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.
      </p>
    </div>
  </div>
  <div
    className="emotion-9 emotion-10 emotion-11"
    elevation={1}
  >
    <div
      className="emotion-0 emotion-1 emotion-2"
      style={
        Object {
          "backgroundImage": "url(\\"/images/bridge.jpg\\")",
        }
      }
      title="Golden Gate Bridge"
    />
    <div
      className="emotion-7 emotion-8"
    >
      <h2
        className="emotion-3 emotion-4"
      >
        Golden Gate Bridge
      </h2>
      <p
        className="emotion-5 emotion-4"
      >
        The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.
      </p>
    </div>
  </div>
  <div
    className="emotion-9 emotion-10 emotion-11"
    elevation={1}
  >
    <div
      className="emotion-0 emotion-1 emotion-2"
      style={
        Object {
          "backgroundImage": "url(\\"/images/bridge.jpg\\")",
        }
      }
      title="Golden Gate Bridge"
    />
    <div
      className="emotion-7 emotion-8"
    >
      <h2
        className="emotion-3 emotion-4"
      >
        Golden Gate Bridge
      </h2>
      <p
        className="emotion-5 emotion-4"
      >
        The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.
      </p>
    </div>
  </div>
  <div
    className="emotion-9 emotion-10 emotion-11"
    elevation={1}
  >
    <div
      className="emotion-0 emotion-1 emotion-2"
      style={
        Object {
          "backgroundImage": "url(\\"/images/bridge.jpg\\")",
        }
      }
      title="Golden Gate Bridge"
    />
    <div
      className="emotion-7 emotion-8"
    >
      <h2
        className="emotion-3 emotion-4"
      >
        Golden Gate Bridge
      </h2>
      <p
        className="emotion-5 emotion-4"
      >
        The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.
      </p>
    </div>
  </div>
  <div
    className="emotion-9 emotion-10 emotion-11"
    elevation={1}
  >
    <div
      className="emotion-0 emotion-1 emotion-2"
      style={
        Object {
          "backgroundImage": "url(\\"/images/bridge.jpg\\")",
        }
      }
      title="Golden Gate Bridge"
    />
    <div
      className="emotion-7 emotion-8"
    >
      <h2
        className="emotion-3 emotion-4"
      >
        Golden Gate Bridge
      </h2>
      <p
        className="emotion-5 emotion-4"
      >
        The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.
      </p>
    </div>
  </div>
  <div
    className="emotion-9 emotion-10 emotion-11"
    elevation={1}
  >
    <div
      className="emotion-0 emotion-1 emotion-2"
      style={
        Object {
          "backgroundImage": "url(\\"/images/bridge.jpg\\")",
        }
      }
      title="Golden Gate Bridge"
    />
    <div
      className="emotion-7 emotion-8"
    >
      <h2
        className="emotion-3 emotion-4"
      >
        Golden Gate Bridge
      </h2>
      <p
        className="emotion-5 emotion-4"
      >
        The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.
      </p>
    </div>
  </div>
</div>
`;
